# libxmr

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md  build.rs  ffigen.yaml  libxmr_bindings.h  pubspec.yaml
android/: build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
example/: .gitignore  README.md  pubspec.yaml
example/android/app/: build.gradle
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/kotlin/com/example/libxmr_example/: MainActivity.kt
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart
example/linux/: CMakeLists.txt  my_application.cc
example/linux/flutter/: generated_plugins.cmake
example/macos/Runner.xcodeproj/: project.pbxproj
example/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
example/macos/Runner/Configs/: AppInfo.xcconfig
example/windows/: CMakeLists.txt
example/windows/flutter/: generated_plugins.cmake
example/windows/runner/: Runner.rc  main.cpp
ios/: libxmr.podspec
ios/Classes/: libxmr.c
lib/: libxmr.dart  libxmr_bindings_generated.dart
linux/: CMakeLists.txt  libxmr_plugin.cc
linux/include/libxmr/: libxmr_plugin.h
macos/: libxmr.podspec
scripts/linux/: build_all.sh  build_example.sh  regen_bindings.sh
scripts/linux/patches/: Cargo.toml.patch  build.rs.patch
src/: CMakeLists.txt  lib.rs  libxmr.c  main.rs
windows/: CMakeLists.txt
